alignment corrected

--- a/src/pages/Dashboard.module.scss
+++ b/src/pages/Dashboard.module.scss
@@ -46,7 +46,7 @@
 
 .next{
   width: 25.3rem;
-  margin-right: 3rem;
+  margin-right: 19rem;
   margin-top:3%;
 }
 
