--- a/src/pages/Routeone.module.scss
+++ b/src/pages/Routeone.module.scss
@@ -86,7 +86,7 @@
   .cardviewright{
     display: flex;
     flex-direction: column;
-    align-items:left;
+    align-items:right;
     padding: 0px;
     gap: 10px;
   
