--- a/src/pages/Welcome.module.scss
+++ b/src/pages/Welcome.module.scss
@@ -27,7 +27,7 @@
 
 .smallbut{
   width: 25rem;
-  margin-right: 10%;
+  margin-right: 3rem;
   background: rgb(129, 234, 166);
   color: black;
 }
@@ -44,7 +44,7 @@
 
 .next{
   width: 25.3rem;
-  margin-right: 9%;
+  margin-right: 3rem;
   margin-top:3%;
 }
 
@@ -88,3 +88,10 @@ top: 23.8rem;
     top: 8%;
     right: 40%;
 }
+
+.new{
+  width: 25.3rem;
+  margin-right: 19%;
+  margin-top:3%;
+}
+
